# BareMetal

./: README.md
000_BareMetalNoLib/: Makefile  led.c  led.h  main.c  main.h  stm32_ls.ld  stm32_startup.c
001_BareMetalNanoLib/: Makefile  final.elf  final.hex  final.map  led.c  main.c  main_log
002_BareMetalSemiHosting/: Makefile  final.elf  final.hex  final.map  led.h  led_log  main.c  main.h
003_EmptyNoLib/: Makefile  final.elf  final.hex  final.map  stm32_ls.ld  stm32_startup.c
004_EmptyNanoLib/: Makefile  final.elf  final.hex  final.map  stm32_ls.ld
005_EmptySemiHosting/: Makefile  final.elf  final.hex  final.map  main.c  stm32_ls.ld  stm32_startup.c
006_GPIOOut/: Makefile  final.elf  final.hex  final.map  main.c
007_GPIOIn/: Makefile  main.c
008_VirtualComTxCharacter/Core/src/: main.c
009_VirtualComTxText/Core/src/: main.c
010_VirtualComTxNumber/Core/src/: main.c
011_SysTick/: Makefile
011_SysTick/Core/src/: main.c
012_VirtualComTxRxIRQCharacter/Core/src/: main.c
013_VirtualComTxRxIRQText/Core/src/: main.c
014_VirtualComTxRxIRQSendback/Core/src/: main.c
015_UARTTxRxIRQSendback/Core/src/: main.c
016_ADC/Core/src/: main.c
017_ADCFloat/: Makefile
017_ADCFloat/Core/src/: main.c
018_ADCDMASingle/Core/src/: main.c
019_ADCDMAplusTemp/Core/src/: main.c
020_SPI/: Makefile
020_SPI/Core/src/: main.c
021_Timer/: Makefile
021_Timer/Core/src/: main.c
022_PWM/Core/src/: main.c
023_PWMDimming/Core/src/: main.c
024_DAC/: Makefile
024_DAC/Core/inc/: main.h
024_DAC/Core/src/: main.c
025_Cmake/: Makefile
025_Cmake/.cache/clangd/index/: core_cm4.h.08B16B0C11860CC3.idx  core_cm4_simd.h.DD55C1FF537B5C3D.idx  core_cmFunc.h.5A1EF64F019CDE4E.idx  core_cmFunc.h.9B8ABFC5CCB5159C.idx  core_cmInstr.h.265733B08C8273D6.idx  core_cmInstr.h.9AEDBC3848BEF28C.idx  main.c.2EB3AB320AC37902.idx  main.c.D38158A6BA0A150D.idx  main.h.3301C837C61A5769.idx  misc.c.6248AD412D498B4D.idx  misc.c.BC0DF47E4077D3D5.idx  misc.h.0EE8FC51C4B80259.idx  misc.h.3F0FC67FB2ADA546.idx  project.c.713AFE320C246F74.idx  project.c.8E5CA574E3BA3CF7.idx  project.h.92B538255E915208.idx  (+86 more)
025_Cmake/Core/inc/: main.h  stm32f4xx_conf.h
025_Cmake/Project/: project.h
026_DockerPodman/: CMakeLists.txt  Dockerfile  Makefile  gcc-arm-none-eabi.cmake
026_DockerPodman/Core/inc/: stm32f4xx_conf.h
026_DockerPodman/Core/src/: main.c  syscalls.c  system_stm32f4xx.c
026_DockerPodman/Project/: project.c
026_DockerPodman/Startup/: STM32F439NIHx_FLASH.ld
027_RTC/: CMakeLists.txt
027_RTC/.cache/clangd/index/: core_cm4.h.3495FC7CA5623019.idx  core_cm4_simd.h.41D43546D4B44E2A.idx  main.h.EA7EEADFEBB40C68.idx  project.h.BD42D9F9D31B89F1.idx  stm32f4xx.h.C51DE5B8576CDD0F.idx  stm32f4xx_adc.h.3DEB9EA03E8A7E9C.idx  stm32f4xx_can.c.AD026967BD800870.idx  stm32f4xx_can.h.5EDB17D40021B1F4.idx  stm32f4xx_conf.h.38976137DA0619EE.idx  stm32f4xx_crc.c.234539CF87E2C2A0.idx  stm32f4xx_cryp.h.F4CFBA88FA42C2A3.idx  stm32f4xx_cryp_des.c.819A1F6BC68384B4.idx  stm32f4xx_dac.c.30CC4320BFAE9457.idx  stm32f4xx_dbgmcu.c.28681E21F814C238.idx  stm32f4xx_dbgmcu.h.56722B58378F4484.idx  stm32f4xx_dcmi.h.2234167417C8A6CC.idx  stm32f4xx_flash.h.B42941458B69FD18.idx  stm32f4xx_gpio.c.D61274D4A3F775D2.idx  stm32f4xx_gpio.h.20569AC7D9AB89E3.idx  stm32f4xx_hash.h.C94529AC5A41B95A.idx  stm32f4xx_hash_sha1.c.70F516CE87BB975C.idx  stm32f4xx_i2c.h.CCC97DA0F855EC38.idx  stm32f4xx_iwdg.c.3C0E4AE1EA370E20.idx  stm32f4xx_iwdg.h.3E5ECA8B3CE9E85E.idx  stm32f4xx_pwr.c.5307D63DED98CFE1.idx  stm32f4xx_rcc.h.8E8B407FB890743C.idx  stm32f4xx_rng.c.185BE18D2E11EBBB.idx  stm32f4xx_rng.h.63E6D53509977A9B.idx  stm32f4xx_rtc.h.8AA663DEFACDB6E6.idx  stm32f4xx_sdio.h.F8FA848218164033.idx  stm32f4xx_spi.c.CB3281F75A777277.idx  stm32f4xx_syscfg.h.987B479509097158.idx  stm32f4xx_tim.c.223144B0E74270B8.idx  stm32f4xx_usart.c.F281CDBB00BAB567.idx  stm32f4xx_wwdg.c.65C9EE6B5D747B31.idx  stm32f4xx_wwdg.h.E05824902A4B4BCC.idx  syscalls.c.2D6AF1055012C3EC.idx  system_stm32f4xx.c.36267105A52420E1.idx
027_RTC/Core/inc/: main.h
027_RTC/Core/src/: main.c
028_I2CMaster/: CMakeLists.txt  Makefile
028_I2CMaster/Core/inc/: main.h
028_I2CMaster/Core/src/: main.c  syscalls.c  system_stm32f4xx.c
028_I2CMaster/Project/: project.c  project.h
(+140 files in other folders)
